Refactor Sqlg to support null values. THIS IS A BREAKING CHANGE, property.isPresent()'s semantics changes with this refactor.